k8s/khulnasoft-dash-web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: khulnasoft-dash-web
  namespace: khulnasoft
spec:
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 80
  selector:
    run: khulnasoft-dash-web
  type: NodePort
